tests/let-bindings/structural-patterns/ill-typed/test-1-3.stella
language core;

extend with #let-bindings, #let-patterns, #structural-patterns, #tuples;

fn main(n : Nat) -> Nat {
  return
  	let {x, y, z} = {0, true} in
    if y then x else succ(x)
}
